# PaxPro

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  LICENCE.md  README.md  create_config.py  installDependenciesDebian.sh  installDependenciesFedora.sh  paxpro++  plot.py  pyconfig.py.in  slab.scad  slabSphere.scad
Examples/: circularWG.py  paxproLogo.py  primitiveGeomExample.cpp  setupTetraGeo.cpp  simple_example.py  slab.cpp  slabSphere.cpp  sphere.cpp  sphere.py  waveguide2D.cpp
Geometries/: plane.brp  sphere.brp  sphere.geo  sphere.msh  sphereOnPlane.fcstd  void.brp
MeshGeo/: mesher.py
PythonWrapper/: createPythonModule.sh  pypaxpro.i
Scripts/: plotSphereScat.py  plotWaveguide2D.py
include/: absorber.hpp  alternatingDirectionSolver.hpp  bvhTree.hpp  config.h.in  controlFile.hpp  curvedWaveGuide2D.hpp  exitFieldSource.hpp  fftSolver2D.hpp  fftSolver3D.hpp  gaussianBeam.hpp  genericScattering.hpp  geometry.hpp  geometrySimplices.hpp  hashTetras.hpp  hdf5DataspaceCreator.hpp  materialFunction.hpp  paraxialSimulation.hpp  paxpro.hpp  postProcessMod.hpp  postProcessing.hpp  projectionSolver.hpp  refractiveIndex.hpp  shapes.hpp  solver.hpp  solver2D.hpp  solver3D.hpp  tetraGeometry.hpp  thomasAlgorithm.tpp  waveGuideFDSimulation.hpp
pypaxpro/: createPythonModule.sh  pypaxpro.i  setup.py
src/: .gitignore  CMakeLists.txt  alternatingDirectionSolver.cpp  bvhTree.cpp  controlFile.cpp  crancNicholson.cpp  curvedWaveGuide2D.cpp  farFieldPost.cpp  fftSolver3D.cpp  gaussianBeam.cpp  genericScattering.cpp  geometry.cpp  hashTetras.cpp  materialFunction.cpp  paraxialSimulation.cpp  postProcessMod.cpp  projectionSolver.cpp  refractiveIndex.cpp  shape.cpp  solver.cpp  solver2D.cpp  solver3D.cpp  tetraGeometry.cpp  waveGuideFDSimulation.cpp
unittest/: alltests.cpp  transformTest.cpp
